Add support for tailwindcss

--- a/src/components/app-layout/index.marko
+++ b/src/components/app-layout/index.marko
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <${input.head}/>
   </head>
-  <body>
+  <body class="font-sans">
     <sample-header title="Marko UI Components Playground"/>
     <div class="container">
       <main id="main">
