--- a/src/components/app-main/index.marko
+++ b/src/components/app-main/index.marko
@@ -2,6 +2,9 @@
   <h1>Hello!</h1>
   <app-sections>
     <@section title="Buttons">
+      <h1 class="hidden">
+        hi
+      </h1>
       <table>
         <tr>
           <td>
