--- a/src/pages/index/template.marko
+++ b/src/pages/index/template.marko
@@ -1,10 +1,7 @@
 <app-layout>
   <@head>
     <title>UI Components Playground</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
-      media="all"
-      rel="stylesheet"/>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </@head>
   <@body>
     <app-main/>
