--- a/src/pages/:stories/index.marko
+++ b/src/pages/:stories/index.marko
@@ -1,12 +1,7 @@
 import { getStories } from "../../lib/api"
 
-static function getPage(query) {
-  console.log("q", query)
-  if (!query || !query.includes("page")) return 1;
-  return +query.split("=")[1];
-}
+$ const page = input.query.page || 1;
 
-$ const page = getPage(input.query);
 <app-layout>
   <div class="news-view">
     <await(getStories(input.params.stories || "top", page)) client-reorder>
@@ -15,7 +10,7 @@ $ const page = getPage(input.query);
           <if(page > 1)>
             <a
               class="page-link"
-              href=`${input.pathname}?page=${page - 1}`
+              href=`${input.pathname}/?page=${page - 1}`
               aria-label="Previous Page">
               < prev
             </a>
@@ -28,7 +23,7 @@ $ const page = getPage(input.query);
           <if(stories.length >= 28)>
             <a
               class="page-link"
-              href=`${input.pathname}?page=${page + 1}`
+              href=`${input.pathname}/?page=${page + 1}`
               aria-label="Next Page">
               more >
             </a>
